--- a/scripts/Final-Project.Rmd
+++ b/scripts/Final-Project.Rmd
@@ -11,7 +11,22 @@ abstract: |
   classification, predictive models, etc. I plan to take the work we
   do in that class and convert it for the use of the r-markdown paper
   in PS811. 
-output: pdf_document
-geometry: margin = 1.15in              
+output: 
+  pdf_document:
+    latex_engine: xelatex
+mainfont: Arial
+geometry: margin = 1in              
 fontsize: 12pt 
 ---
+
+```{r set options, echo=FALSE, include=FALSE}
+knitr::opts_chunk$set(echo=FALSE, include=FALSE)
+```
+
+```{r libraries, echo=FALSE}
+library(here)
+```
+
+Typing some sample text here. Now I want to insert a Tableau image. Let's see if it works! 
+
+![alt text goes here](/Users/pbasu/Desktop/PS811-Final-Project/images/tableau-test.png) 
