--- a/scripts/bibliography.bib
+++ b/scripts/bibliography.bib
@@ -1,1 +1,11 @@
-test
+@article{housing,
+  title={Hedonic housing prices and the demand for clean air},
+  author={Harrison Jr, David and Rubinfeld, Daniel L},
+  journal={Environmental Economics and Management},
+  volume={05},
+  number={01},
+  pages={81--102},
+  year={1978},
+  publisher={Elsevier},
+  url={https://www.sciencedirect.com/science/article/pii/0095069678900062}
+}
