--- a/scripts/Final-Project.Rmd
+++ b/scripts/Final-Project.Rmd
@@ -54,6 +54,7 @@ library(tree)
 
 ```{r read in script}
 source("tree-regression.R")
+knitr::read_chunk("tree-regression.R")
 ```
 
 
@@ -66,27 +67,25 @@ typity typity type type
 # Regression Trees
 typity typity type type
 ```{r cp table, include=TRUE, results=TRUE}
-plotcp(boston_tree)
+<<plotcp>>
 ```
 typity typity type type
 
 ```{r first tree, include=TRUE, results=TRUE}
-prp(tree_prune, extra = 1, box.col = "olivedrab3")
+<<firsttree>>
 ```
 typity typity type type
 ```{r partition tree, include=TRUE, results=TRUE}
-plot(boston$LSTAT, boston$RM, col = "olivedrab3", pch=20, xlab="LSTAT",ylab="RM")
-partition.tree(prune.tree(tree(target ~ RM + LSTAT, data = training), best = 5), ordvars=c("LSTAT","RM"), add=TRUE, cex = 1.15)
+<<partitiontree>>
 ```
 typity typity type type
 ```{r second tree, include=TRUE, results=TRUE}
-prp(pdtree, extra = 1, box.col = "olivedrab3")
+<<secondtree>>
 ```
 typity typity type type
 
 # Random Forests
 typity typity type type
 ```{r importance plot, include=TRUE, results=TRUE}
-varImpPlot(rf_boston, sort = TRUE)
+<<importanceplot>>
 ```
-
